# E-Bill

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: release.yml  rust.yml  test.yml  wasm_release.yml
.github/workflows/wizard/: brew_install.sh  spec.xml  spec.xml.backup
.github/workflows/wizard/unknown variable agent_workdir/be/.github/workflows/wizard/: bitcredit-0.5-windows-installer.exe.tmp
crates/bcr-ebill-api/: Cargo.toml
crates/bcr-ebill-api/src/: constants.rs  lib.rs
crates/bcr-ebill-api/src/data/: mod.rs
crates/bcr-ebill-api/src/persistence/: mod.rs
crates/bcr-ebill-api/src/service/: backup_service.rs  company_service.rs  contact_service.rs  file_upload_service.rs  identity_service.rs  mod.rs  search_service.rs
crates/bcr-ebill-api/src/service/bill_service/: blocks.rs  data_fetching.rs  error.rs  issue.rs  mod.rs  payment.rs  propagation.rs  service.rs  test_utils.rs  validation.rs
crates/bcr-ebill-api/src/service/notification_service/: bill_action_event_handler.rs  default_service.rs  email.rs  email_sendgrid.rs  handler.rs  mod.rs  nostr.rs  push_notification.rs  test_utils.rs  transport.rs
crates/bcr-ebill-api/src/tests/: mod.rs
crates/bcr-ebill-api/src/util/: file.rs  mod.rs
crates/bcr-ebill-core/: Cargo.toml
crates/bcr-ebill-core/src/: bill.rs  constants.rs  contact.rs  identity.rs  lib.rs  notification.rs
crates/bcr-ebill-core/src/bill/: mod.rs  validation.rs
crates/bcr-ebill-core/src/blockchain/: mod.rs
crates/bcr-ebill-core/src/blockchain/bill/: block.rs  chain.rs  mod.rs
crates/bcr-ebill-core/src/blockchain/company/: mod.rs
crates/bcr-ebill-core/src/blockchain/identity/: mod.rs
crates/bcr-ebill-core/src/tests/: mod.rs
crates/bcr-ebill-core/src/util/: crypto.rs  currency.rs  date.rs  mod.rs
crates/bcr-ebill-persistence/: Cargo.toml
crates/bcr-ebill-persistence/src/: bill.rs  constants.rs  file_upload.rs  identity.rs  lib.rs  nostr.rs  notification.rs
crates/bcr-ebill-persistence/src/db/: backup.rs  bill.rs  bill_chain.rs  company.rs  company_chain.rs  contact.rs  file_upload.rs  identity.rs  identity_chain.rs  mod.rs  nostr_event_offset.rs  nostr_send_queue.rs  notification.rs
crates/bcr-ebill-persistence/src/tests/: mod.rs
crates/bcr-ebill-pwa/: Cargo.toml  index.html  main.js
crates/bcr-ebill-pwa/src/: constants.rs  context.rs  data.rs  error.rs  job.rs  lib.rs
crates/bcr-ebill-pwa/src/api/: bill.rs  company.rs  contact.rs  general.rs  identity.rs  mod.rs  notification.rs  quotes.rs
crates/bcr-ebill-pwa/src/data/: bill.rs  company.rs  contact.rs  identity.rs  mod.rs  notification.rs
crates/bcr-ebill-transport/: Cargo.toml
crates/bcr-ebill-transport/src/: lib.rs  notification_service.rs  push_notification.rs  transport.rs
crates/bcr-ebill-transport/src/email/: email.rs  email_sendgrid.rs  mod.rs
crates/bcr-ebill-transport/src/event/: bill_events.rs  chain_event.rs  mod.rs
crates/bcr-ebill-transport/src/handler/: bill_action_event_handler.rs  bill_chain_event_handler.rs  mod.rs
crates/bcr-ebill-wasm/: Cargo.toml  README.md  build.rs  index.html  main.js
crates/bcr-ebill-wasm/src/: constants.rs  context.rs  error.rs  job.rs  lib.rs
crates/bcr-ebill-wasm/src/api/: bill.rs  company.rs  contact.rs  general.rs  identity.rs  mod.rs  notification.rs  quote.rs
crates/bcr-ebill-wasm/src/data/: bill.rs  contact.rs  identity.rs  mod.rs
crates/bcr-ebill-web/: Cargo.toml
crates/bcr-ebill-web/src/: api_docs.rs  config.rs  constants.rs  data.rs  error.rs  main.rs  router.rs  service_context.rs
crates/bcr-ebill-web/src/handlers/: bill.rs  company.rs  contacts.rs  identity.rs  middleware.rs  mod.rs  notifications.rs  quotes.rs
crates/bcr-ebill-web/src/job/: mod.rs
docs/: configuration.md  index.md  prerequisites.md  testing.md  wasm.md  wasm_configuration.md  wasm_releasing.md  web.md  web_configuration.md
src/: config.rs  constants.rs  dht.rs  main.rs  web.rs
src/blockchain/company/: mod.rs
src/dht/: client.rs  mod.rs
src/persistence/: bill.rs  identity.rs  mod.rs
src/persistence/db/: identity.rs
src/service/: bill_service.rs  company_service.rs  identity_service.rs  mod.rs
src/web/: data.rs  mod.rs
src/web/handlers/: bill.rs  mod.rs
src/web/handlers/company/: mod.rs
