[package]
name = "bcr-ebill-api"
version = "0.3.8"
edition = "2024"

[lib]
doctest = false

[dependencies]
borsh.workspace = true
borsh-derive.workspace = true
chrono.workspace = true
async-trait.workspace = true
serde_json.workspace = true
serde.workspace = true
serde_repr.workspace = true
log.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
bitcoin.workspace = true
nostr-sdk.workspace = true
futures.workspace = true
reqwest.workspace = true
infer = { version = "0.19.0", default-features = false }
bcr-ebill-core = { path = "../bcr-ebill-core" }
bcr-ebill-persistence = { path = "../bcr-ebill-persistence" }
bcr-ebill-transport = { path = "../bcr-ebill-transport" }
tokio.workspace = true
tokio_with_wasm.workspace = true

[dev-dependencies]
mockall = "0.13.1"
nostr-relay-builder = "0.40"
tokio.workspace = true
async-broadcast.workspace = true

[features]
embedded-db = ["bcr-ebill-persistence/embedded-db"]
