[package]
name = "bcr-ebill-persistence"
version = "0.3.8"
edition = "2024"

[lib]
doctest = false

[dependencies]
borsh.workspace = true
chrono.workspace = true
async-trait.workspace = true
serde_json.workspace = true
serde.workspace = true
log.workspace = true
thiserror.workspace = true
uuid.workspace = true
futures.workspace = true
surrealdb = { version = "2.2", default-features = false }
bcr-ebill-core = { path = "../bcr-ebill-core"}
getrandom = { version = "0.3.1", features = ["wasm_js"] } # needed for wasm build

# Enable "kv-indxdb" only for WebAssembly (wasm32)
[target.'cfg(target_arch = "wasm32")'.dependencies]
surrealdb = { version = "2.2", default-features = false, features = ["kv-indxdb"] }
base64 = "0.22"

# Enable "protocol-ws" for all other targets
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
surrealdb = { version = "2.2", default-features = false, features = ["protocol-ws"] }
tokio.workspace = true

[dev-dependencies]
surrealdb = { version = "2.2.0", features = ["kv-mem"], default-features = false }
tokio.workspace = true
base64 = "0.22"

[features]
embedded-db = ["surrealdb/kv-rocksdb"]
