[package]
name = "bcr-ebill-pwa"
version = "0.2.0"
edition = "2024"


# TODO: only for debug for now
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
serde.workspace = true
futures.workspace = true
serde_repr.workspace = true
log.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
js-sys = "0.3.77"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3", features = ["console"] }
console_error_panic_hook = "0.1.7"
console_log = { version = "1.0.0", features = ["color"] }
gloo-timers = { version = "0.3.0", features = ["futures"] }
bcr-ebill-api = { path = "../bcr-ebill-api" }

