[package]
name = "bcr-ebill-transport"
version = "0.3.8"
edition = "2024"

[lib]
doctest = false

[dependencies]
bcr-ebill-core = { path = "../bcr-ebill-core" }
bcr-ebill-persistence = { path = "../bcr-ebill-persistence" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
nostr-sdk.workspace = true
log.workspace = true
tokio.workspace = true
reqwest.workspace = true 
async-broadcast.workspace = true

[dev-dependencies]
mockall = "0.13.1"
