[package]
name = "bcr-ebill-wasm"
version = "0.3.8"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
futures.workspace = true
serde_repr.workspace = true
log.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
tokio_with_wasm.workspace = true
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2"
js-sys = "0.3.77"
wasm-bindgen-futures = "0.4.50"
console_error_panic_hook = "0.1.7"
console_log = { version = "1.0.0", features = ["color"] }
gloo-timers = { version = "0.3.0", features = ["futures"] }
tsify = { version = "0.4.5", features = ["js"] }
bcr-ebill-api = { path = "../bcr-ebill-api" }
bcr-ebill-transport = { path = "../bcr-ebill-transport" }
