[package]
name = "bcr-ebill-web"
version = "0.3.3"
edition = "2024"

[dependencies]
env_logger.workspace = true
chrono.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde_json.workspace = true
serde.workspace = true
serde_repr.workspace = true
lazy_static.workspace = true
log.workspace = true
anyhow.workspace = true
thiserror.workspace = true
rocket = "0.5.1"
rocket_cors = { version = "0.6.0", default-features = false }
rocket_ws = { version = "0.1.1", features = [
  "tokio-tungstenite",
], default-features = false }
open = "5.3.2"
clap = { version = "4.5.29", features = ["derive", "env"] }
# version = "5"
utoipa = { git = "https://github.com/juhaku/utoipa/", rev = "1d32f0524a8680d79537ae92aa9ced6ba9d2b630", package = "utoipa", features = [
  "chrono",
  "rocket_extras",
], default-features = false }
# version = "9" - temporary until downstream semver breakage in zip2 is fixed
utoipa-swagger-ui = { git = "https://github.com/juhaku/utoipa/", rev = "1d32f0524a8680d79537ae92aa9ced6ba9d2b630", package = "utoipa-swagger-ui", features = ["rocket"], default-features = false }
# temporary until downstream semver breakage in zip2 is fixed
zip = "=2.5.0"
bcr-ebill-api = { path = "../bcr-ebill-api" }
bcr-ebill-transport = { path = "../bcr-ebill-transport" }

[patch.crates-io]

[features]
embedded-db = ["bcr-ebill-api/embedded-db"]
